# QT-programs

./: README.md
3buttons/: main.cpp  mywidget.cpp  mywidget.h
BUG-SetProperty/: BUG-SetProperty.pro  main.cpp
Calculator/: calculator.cpp  calculator.h  main.cpp
Calculator1/: calculator.cpp  calculator.h  main.cpp
Diamond_Hybrid/: Diamond_Hybrid.pro  cngengine.cpp  cngengine.h  engine.cpp  engine.h  hybridengine.cpp  hybridengine.h  main.cpp  petrolengine.cpp  petrolengine.h
Example_officeproblem/: employee.cpp  employee.h  main.cpp  office.cpp  office.h
Example_samefunction/: Example_samefunction.pro  main.cpp  school.cpp  school.h  student.cpp  student.h
Hybrid_inheritace/: employee.cpp  employee.h  intern.cpp  intern.h  main.cpp  person.cpp  person.h  student.cpp  student.h
Multilevel_inheritace/: Multilevel_inheritace.pro  employee.cpp  employee.h  main.cpp  manager.cpp  manager.h  person.cpp  person.h
Multiple_inheritance/: Multiple_inheritance.pro  employee.cpp  employee.h  job.cpp  job.h  main.cpp  person.cpp  person.h
Office_employee/: Office_employee.pro  baseobjectclass.cpp  baseobjectclass.h  employee.cpp  employee.h  main.cpp  office.cpp  office.h
QTBUG-104863/: QTBUG-104863.pro  main.cpp
QTBUG-112763/: main.cpp
QTBUG-115375/: QTBUG-115375.pro  main.cpp
QTBUG-136598/: CMakeLists.txt  Main.qml  main.cpp
QTBUG-137716-width-capstyle/: QTBUG-137716-width-capstyle.pro  main.cpp
QTBUG-137932/: CMakeLists.txt  ComboBox.qml  main.cpp  main.qml
QTBUG-33977/: QTBUG-33977.pro  main.cpp
QTBUG-50303/: main.cpp
QTBUG-59638/: main.cpp  (+1 more)
(+98 files in other folders)
